update to Module::Install 1.10

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ Implement option --xargs for pp:
 - passes result as @ARGV when running script for -x
 - bump required version of Module::ScanDeps to the first to implement this
 
+Update to Module::Install 1.10
+
 [Changes for 1.019 - July 7, 2014]
 
 Fix RT #96288: PAR::Packer unable to build under Win32/ActivePerl v5.14.2
