--- a/Changes
+++ b/Changes
@@ -1,3 +1,14 @@
+1.025  2015-01-24
+
+  - Fix PAR::Packer "make test" problem with Strawberry Portable
+
+  - Fix for PAR-Packer 1.024 with a nonstandard libperl.so name
+    Patch from markus.jansen@ericsson.com, thanks!
+
+  - Fix #101662: Prevent shared libs from being cached in memory on AIX
+    Applied patch from Thoke@northpeak.org, thanks.
+    Note: this is one half of the fix, the other is in PAR
+
 1.024  2014-11-07
 
   - Fix RT #99231: Problem with PAR::Packer 1.022 on Perl 5.20.1 and earlier.
