--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+1.028  2015-11-19
+
+- Fix RT#109123: v1.027 tests are not passed under windows
+  Apparently, even when called with a list, system() on Strawberry Perl
+  on Windows has a problem with arguments containing double quotes,
+  hence avoid them.
+
+------------------------------------------------------------------------
+
 1.027  2015-11-18
 
 - Add option -M Foo::Bar:: to pp (note the trailing double colon):
