remove all references to http://par.perl.org/, doesn't exist anymore

--- a/README
+++ b/README
@@ -104,8 +104,7 @@ contact the mailing list for details.
 
 * Contact
 
-<http://par.perl.org/> is the official PAR website.  You can write
-to the mailing list at <par@perl.org>, or send an empty mail to
+You can write to the mailing list at <par@perl.org>, or send an empty mail to
 <par-subscribe@perl.org> to participate in the discussion.
 
 Please submit bug reports to <bug-par@rt.cpan.org>.
