--- a/script/parl.pod
+++ b/script/parl.pod
@@ -99,7 +99,7 @@ L<PAR>, L<PAR::Dist>, L<par.pl>, L<pp>
 
 Audrey Tang E<lt>cpan@audreyt.orgE<gt>
 
-L<http://par.perl.org/> is the official PAR website.  You can write
+You can write
 to the mailing list at E<lt>par@perl.orgE<gt>, or send an empty mail to
 E<lt>par-subscribe@perl.orgE<gt> to participate in the discussion.
 
