point bug reports to bug-par-packer@rt.cpan.org
add myself to AUTHORS in a few places

--- a/README
+++ b/README
@@ -94,7 +94,7 @@ Please consult the documentation of 'pp' for more information.
 You can write to the mailing list at <par@perl.org>, or send an empty mail to
 <par-subscribe@perl.org> to participate in the discussion.
 
-Please submit bug reports to <bug-par@rt.cpan.org>.
+Please submit bug reports to <bug-par-packer@rt.cpan.org>.
 
 * Copyright
 
