--- a/README
+++ b/README
@@ -103,4 +103,4 @@ Copyright 2002-2010 by Audrey Tang <cpan@audreyt.org>.
 All rights reserved.  You can redistribute and/or modify
 this bundle under the same terms as Perl itself.
 
-See <http://www.perl.com/perl/misc/Artistic.html>.
+See LICENSE.
